fixed hero, working on card, text isn't aligned properly? but also not really a problem too much?

--- a/style.css
+++ b/style.css
@@ -2,13 +2,17 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     flex-direction: column;
+    margin: 0;
 }
+
 .logo {
     font-size: 24px;
-    color: #F9FAF8
+    color: #F9FAF8;
+    margin-top: 18px;
 }
 a {
     text-decoration: none;
+    color: #E5E7EB;
 }
 ul {
     display: flex;
@@ -20,7 +24,41 @@ ul {
     display: flex;
     flex-direction: row;
 }
+
+.header-links {
+    font-size: 18px;
+    color: #E5E7EB;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    margin-left: auto;
+}
 .hero {
+    display: flex;
+    flex-direction: column;
+    padding-left: 100px;
+    padding-right: 100px;
+}
+.content-1 {
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+    padding-top: 75px;
+    padding-bottom: 75px;
+}
+button {
+    background-color: #3882f6;
+    border-radius: 5px;
+    color: white;
+    width: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 8px;
+    margin-top: 5px;
+    
+}
+.left-hero {
     display: flex;
     flex-direction: column;
 }
@@ -28,8 +66,7 @@ ul {
 
 .hero-image {
     display: flex;
-    width: 500px;
-    height: 300px;
+    flex: 1, 1, auto;
 }
 .hero-image img {
     max-width: 100%;
@@ -49,4 +86,43 @@ ul {
 .hero, .footer {
     display: flex;
     background-color: #1F2937;
+}
+.content-2 {
+    display: flex;
+    flex-direction: column;
+    padding-left: 100px;
+    padding-right: 100px;
+}
+.content-3 {
+    display: flex;
+    flex: 1;
+    flex-direction: row;
+    justify-content: space-around;
+    align-content: center;
+}
+.card {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 155px;
+    align-items: center;
+}
+.card-image img {
+    max-width: 100%;
+    max-height: 100%;
+}
+.card-image {
+    border-color: #3882f6;
+    border-radius: 5px;
+    display: flex;
+    flex: 1, 1, auto;
+    width: 225px;
+    height: 225px;
+}
+.text {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
